crates/test-files/fixtures/compile_errors/call_call_on_external_contract.fe
use std::context::Context

contract Foo {
    pub fn __call__() {}

    fn f() {}
}

contract Bar {
    fn b(ctx: Context) {
        let foo: Foo = Foo(ctx, address(0))
        foo.__call__()
    }
}
